--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,12 @@
-timeout: 15
-loglevel: -1
+timeout: 10
+loglevel: 1
 logfile: 
-targetfile: ../../small.csv
+targetfile: small.csv
 separator: ","
+# Debug = -1
+# Info = 0
+# Warn = 1
+# Error = 2
+# DPanic = 3
+# Panic = 4
+# Fatal = 5
